fixing overlaping input issue

--- a/fireflight/src/styles/_forms.scss
+++ b/fireflight/src/styles/_forms.scss
@@ -100,7 +100,7 @@
     }
 
     @media (max-device-width: $mq-mobile) {
-      width: 20rem;
+      width: 22rem;
       height: 4rem;
       left: 2rem;
       top: 11.8rem;
